Fix spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -107,6 +107,7 @@ h2 {
 
 #about-content #profile {
     font-family: sans-serif;
+    padding-right: 10px;
 }
 
 #headshot {
